fixed weird mobile overflow issues on performance issues

--- a/packages/web/src/index.css
+++ b/packages/web/src/index.css
@@ -13,5 +13,6 @@
     height: 100vh;
     height: 100dvh;
     overflow: hidden;
+    contain: layout;
   }
 }
